--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,32 @@
-version=0.0.1
+#
+# $Id: build.properties 582 2010-09-06 14:40:02Z thomassh $
+# $Revision: 582 $
+# $Date: 2010-09-06 16:40:02 +0200 (Mon, 06 Sep 2010) $
+# $Author: thomassh $
+#
+# The DOMS project.
+# Copyright (C) 2007-2010  The State and University Library
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
+
+sbutils.lib=sbutils-0.5.1
+#commons-logging.lib=commons-logging-1.1.1
+version=0.0.1#SNAPSHOT
+
+
