Finished configuring the domsclient project for building a JAR file.

--- a/build.properties
+++ b/build.properties
@@ -26,6 +26,7 @@
 #
 
 sbutils.lib=sbutils-0.5.1
+centralWebserviceInterface.lib=centralWebserviceInterface
 #commons-logging.lib=commons-logging-1.1.1
 version=0.0.1#SNAPSHOT
 
