--- a/modules/domsclient/build.xml
+++ b/modules/domsclient/build.xml
@@ -34,6 +34,7 @@
 
 	<dirset id="build.project.libs" dir="${global.dir}/lib">
 		<include name="${sbutils.lib}" />
+		<include name="${centralWebserviceInterface.lib}" />
 	</dirset>
 
 </project>
