Upgraded the DOMS web service interface code from a 0.0.7 snapshot release of domsserver.

--- a/build.properties
+++ b/build.properties
@@ -26,7 +26,7 @@
 #
 
 sbutils.lib=sbutils-0.5.1
-centralWebserviceInterface.lib=centralWebserviceInterface
+centralWebserviceInterface.lib=domsserver-0.0.7#SNAPSHOT
 #commons-logging.lib=commons-logging-1.1.1
 version=0.0.1#SNAPSHOT
 
