--- a/build.properties
+++ b/build.properties
@@ -26,7 +26,7 @@
 #
 
 sbutils.lib=sbutils-0.5.1
-centralWebserviceInterface.lib=domsserver-0.0.7#SNAPSHOT
+centralWebserviceInterface.lib=domsserver-0.0.7
 #commons-logging.lib=commons-logging-1.1.1
 version=0.0.1#SNAPSHOT
 
