--- a/build.properties
+++ b/build.properties
@@ -28,6 +28,6 @@
 sbutils.lib=sbutils-0.5.1
 centralWebserviceInterface.lib=domsserver-0.0.7
 #commons-logging.lib=commons-logging-1.1.1
-version=0.0.1#SNAPSHOT
+version=0.0.1
 
 
