--- a/build.properties
+++ b/build.properties
@@ -26,7 +26,7 @@
 #
 
 sbutils.lib=sbutils-0.5.1
-centralWebserviceInterface.lib=domsserver-0.0.7
+centralWebserviceInterface.lib=domsserver-0.0.11
 #commons-logging.lib=commons-logging-1.1.1
-version=0.0.3#SNAPSHOT
+version=0.0.3
 
