--- a/build.properties
+++ b/build.properties
@@ -28,5 +28,5 @@
 sbutils.lib=sbutils-0.5.1
 centralWebserviceInterface.lib=domsserver-0.0.13
 #commons-logging.lib=commons-logging-1.1.1
-version=0.0.5#SNAPSHOT
+version=0.0.5
 
