--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,16 @@
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>client</artifactId>
-    <version>0.0.8</version>
+    <version>0.0.9-SNAPSHOT</version>
     <name>Doms Admin Client</name>
 
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/client-0.0.8</connection>
-        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/client-0.0.8
+        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk</connection>
+        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk
         </developerConnection>
-        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/tags/client-0.0.8</url>
+        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/trunk</url>
     </scm>
 
 
