--- a/modules/domsclient/pom.xml
+++ b/modules/domsclient/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>dk.statsbiblioteket.doms.central</groupId>
-            <artifactId>centralWebservice-interface</artifactId>
+            <artifactId>central-interface</artifactId>
         </dependency>
     </dependencies>
 
