--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
-    <artifactId>client</artifactId>
+    <artifactId>domsClient-parent</artifactId>
     <version>0.0.9-SNAPSHOT</version>
     <name>Doms Admin Client</name>
 
@@ -22,7 +22,16 @@
 
 
     <modules>
-        <module>modules/domsclient</module>
+        <module>domsClient</module>
+        <module>domsClient-common</module>
+        <module>summaClient</module>
+        <module>summaClientImpl</module>
+        <module>searchClient</module>
+        <module>searchClientImpl</module>
+        <module>ingestClient</module>
+        <module>ingestClientImpl</module>
+        <module>guiClient</module>
+        <module>guiClientImpl</module>
     </modules>
 
     <dependencyManagement>
