--- a/ingestClient/pom.xml
+++ b/ingestClient/pom.xml
@@ -14,5 +14,12 @@
     <artifactId>ingestClient</artifactId>
     <version>0.0.9-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+                     <groupId>dk.statsbiblioteket.doms.client</groupId>
+                     <artifactId>domsClient-common</artifactId>
+                     <version>${project.version}</version>
+                 </dependency>
+
+    </dependencies>
 </project>
