--- a/domsClient-common/pom.xml
+++ b/domsClient-common/pom.xml
@@ -19,6 +19,12 @@
             <groupId>dk.statsbiblioteket.doms.central</groupId>
             <artifactId>central-interface</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
