--- a/ingestClient/pom.xml
+++ b/ingestClient/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
-        <artifactId>client</artifactId>
+        <artifactId>domsClient-parent</artifactId>
         <version>0.0.9-SNAPSHOT</version>
     </parent>
 
@@ -18,7 +18,6 @@
         <dependency>
             <groupId>dk.statsbiblioteket.doms.client</groupId>
             <artifactId>domsClient-common</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
