--- a/summaClient/pom.xml
+++ b/summaClient/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
-        <artifactId>client</artifactId>
+            <artifactId>domsClient-parent</artifactId>
         <version>0.0.9-SNAPSHOT</version>
     </parent>
 
