--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>dk.statsbiblioteket.doms</groupId>
@@ -9,16 +8,16 @@
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>domsClient-parent</artifactId>
-    <version>0.0.9-SNAPSHOT</version>
+    <version>0.0.9</version>
     <name>Doms Admin Client</name>
 
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk</connection>
-        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk
+        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/domsClient-parent-0.0.9</connection>
+        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/domsClient-parent-0.0.9
         </developerConnection>
-        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/trunk</url>
+        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/tags/domsClient-parent-0.0.9</url>
     </scm>
 
 
@@ -36,6 +35,38 @@
     <dependencyManagement>
 
         <dependencies>
+
+            <dependency>
+                <groupId>dk.statsbiblioteket.doms.client</groupId>
+                <artifactId>domsClient-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>dk.statsbiblioteket.doms.ingestClient</groupId>
+                <artifactId>ingestClient</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>dk.statsbiblioteket.doms.client</groupId>
+                <artifactId>domsClient</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>dk.statsbiblioteket.doms.summaClient</groupId>
+                <artifactId>summaClient</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+
+
+
+            <dependency>
+                <groupId>org.apache.tuscany.sdo</groupId>
+                <artifactId>tuscany-sdo-tools</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+
+
             <dependency>
                 <groupId>dk.statsbiblioteket.doms.central</groupId>
                 <artifactId>centralWebservice-interface</artifactId>
@@ -45,6 +76,12 @@
                 <groupId>dk.statsbiblioteket.doms.authchecker</groupId>
                 <artifactId>authchecker-authutils</artifactId>
                 <version>0.0.11</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.2</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
