Started creation of compositeModel handling

--- a/domsClient-parsing/pom.xml
+++ b/domsClient-parsing/pom.xml
@@ -21,7 +21,11 @@
             <groupId>org.apache.tuscany.sdo</groupId>
             <artifactId>tuscany-sdo-tools</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
 
     </dependencies>
 </project>
