Working on getting the xml schema parsing moved to the client. Still broken

--- a/domsClient-common/pom.xml
+++ b/domsClient-common/pom.xml
@@ -20,6 +20,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tuscany.sdo</groupId>
+            <artifactId>tuscany-sdo-tools</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
