--- a/domsClient-common/pom.xml
+++ b/domsClient-common/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tuscany.sdo</groupId>
             <artifactId>tuscany-sdo-tools</artifactId>
         </dependency>
