--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
                 <version>4.9</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>xmlunit</groupId>
+                <artifactId>xmlunit</artifactId>
+                <version>1.3</version>
+                <scope>test</scope>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
