--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
             <dependency>
                 <groupId>dk.statsbiblioteket.doms.central</groupId>
                 <artifactId>centralWebservice-interface</artifactId>
-                <version>0.0.22</version>
+                <version>0.0.23-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>dk.statsbiblioteket.doms.authchecker</groupId>
