--- a/domsClient/pom.xml
+++ b/domsClient/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>0.0.10</version>
     </parent>
 
 
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>dk.statsbiblioteket.doms.client</groupId>
-            <artifactId>domsClient-common</artifactId>
+            <artifactId>domsClient-common-impl</artifactId>
         </dependency>
     </dependencies>
 
