--- a/summaClient/pom.xml
+++ b/summaClient/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
             <artifactId>domsClient-parent</artifactId>
-        <version>0.0.10</version>
+        <version>0.0.10-SNAPSHOT</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.summaClient</groupId>
     <artifactId>summaClient</artifactId>
-    <version>0.0.10</version>
+    <version>0.0.10-SNAPSHOT</version>
 
     
 </project>
