--- a/summaClient/pom.xml
+++ b/summaClient/pom.xml
@@ -4,13 +4,13 @@
 
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
-            <artifactId>domsClient-parent</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <artifactId>domsClient-parent</artifactId>
+        <version>0.0.11</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.summaClient</groupId>
     <artifactId>summaClient</artifactId>
-    <version>0.0.10-SNAPSHOT</version>
 
-    
+
+
 </project>
