--- a/summaClientImpl/pom.xml
+++ b/summaClientImpl/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>0.0.11</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.summaClient</groupId>
     <artifactId>summaClientImpl</artifactId>
-    <version>0.0.10-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
