--- a/domsClient-common-interface/pom.xml
+++ b/domsClient-common-interface/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>0.0.11</version>
+        <version>0.0.12-SNAPSHOT</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>domsClient-common-interface</artifactId>
-    <version>0.0.11</version>
+    <version>0.0.12-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
