--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,21 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms</groupId>
         <artifactId>doms</artifactId>
-        <version>0.1.3</version>
+        <version>0.1.4</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>domsClient-parent</artifactId>
-    <version>0.0.12-SNAPSHOT</version>
+    <version>0.0.12</version>
     <name>Doms Admin Client</name>
 
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk</connection>
-        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk
+        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/domsClient-parent-0.0.12</connection>
+        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/tags/domsClient-parent-0.0.12
         </developerConnection>
-        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/trunk</url>
+        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/tags/domsClient-parent-0.0.12</url>
     </scm>
 
 
@@ -66,7 +66,7 @@
             <dependency>
                 <groupId>dk.statsbiblioteket.doms.central</groupId>
                 <artifactId>centralWebservice-interface</artifactId>
-                <version>0.0.23</version>
+                <version>0.0.24</version>
             </dependency>
             <dependency>
                 <groupId>dk.statsbiblioteket.doms.authchecker</groupId>
