--- a/summaClientImpl/pom.xml
+++ b/summaClientImpl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>0.0.13-SNAPSHOT</version>
+        <version>0.0.13</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.summaClient</groupId>
