DOMS-164 - migrate projects to git: Update pom.xml to reflect the new scm paths.

--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,9 @@
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk</connection>
-        <developerConnection>scm:svn:https://doms.svn.sourceforge.net/svnroot/doms/domsclient/trunk
-        </developerConnection>
-        <url>http://doms.svn.sourceforge.net/viewvc/doms/domsclient/trunk</url>
+        <connection>scm:git:git://github.com/statsbiblioteket/doms-client.git</connection>
+        <developerConnection>scm:git:git@github.com:statsbiblioteket/doms-client.git</developerConnection>
+        <url>https://github.com/statsbiblioteket/doms-client</url>
     </scm>
 
 
