Methods should work now

--- a/domsClient-common-impl/pom.xml
+++ b/domsClient-common-impl/pom.xml
@@ -30,6 +30,12 @@
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -49,5 +55,5 @@
         </plugins>
     </build>
 
-    
+
 </project>
