[maven-release-plugin] prepare release domsClient-parent-1.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>dk.statsbiblioteket.doms</groupId>
@@ -10,7 +8,7 @@
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>domsClient-parent</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>Doms Admin Client</name>
 
     <packaging>pom</packaging>
@@ -19,7 +17,8 @@
         <connection>scm:git:git://github.com/statsbiblioteket/doms-client.git</connection>
         <developerConnection>scm:git:git@github.com:statsbiblioteket/doms-client.git</developerConnection>
         <url>https://github.com/statsbiblioteket/doms-client</url>
-    </scm>
+      <tag>domsClient-parent-1.1</tag>
+  </scm>
 
 
     <modules>
