--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>dk.statsbiblioteket.doms.client</groupId>
     <artifactId>domsClient-parent</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Doms Admin Client</name>
 
     <packaging>pom</packaging>
@@ -17,7 +17,7 @@
         <connection>scm:git:git://github.com/statsbiblioteket/doms-client.git</connection>
         <developerConnection>scm:git:git@github.com:statsbiblioteket/doms-client.git</developerConnection>
         <url>https://github.com/statsbiblioteket/doms-client</url>
-      <tag>domsClient-parent-1.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 
