Use newest version of sbutil

--- a/domsClient-common-impl/pom.xml
+++ b/domsClient-common-impl/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>centralWebservice-interface</artifactId>
         </dependency>
         <dependency>
+            <groupId>dk.statsbiblioteket.sbutil</groupId>
+            <artifactId>sbutil-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.0</version>
