--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>dk.statsbiblioteket.sbutil</groupId>
+                <artifactId>sbutil-common</artifactId>
+                <version>0.5.29</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.tuscany.sdo</groupId>
                 <artifactId>tuscany-sdo-tools</artifactId>
                 <version>1.1.1</version>
