[maven-release-plugin] prepare release domsClient-parent-1.3

--- a/domsClient-common-impl/pom.xml
+++ b/domsClient-common-impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
     </parent>
 
     <artifactId>domsClient-common-impl</artifactId>
