--- a/ingestClientImpl/pom.xml
+++ b/ingestClientImpl/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>dk.statsbiblioteket.doms.client</groupId>
         <artifactId>domsClient-parent</artifactId>
-        <version>1.3</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <groupId>dk.statsbiblioteket.doms.ingestClient</groupId>
     <artifactId>ingestClientImpl</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
